--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -29,6 +29,15 @@
   text-align: center;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
+p {
+  color: white;
+}
+
 body {
   background-color: var(--color-dark-blue);
 }
@@ -160,6 +169,10 @@ header > nav a {
 .card:hover > img {
   filter: none;
   transform: scale(1.05);
+}
+
+.card p {
+  color: black;
 }
 
 .card:hover > h2 {
