--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,5 +1,4 @@
 .homepage_content {
-  height: 80vh;
   background-image: url("/public/wp.png");
   background-position: center top;
   background-size: cover;
@@ -7,6 +6,7 @@
   align-items: center;
   padding-left: 2rem;
   padding-right: 2rem;
+  height: 90vh;
 }
 
 @keyframes shadow-opacity-animation {
@@ -24,12 +24,10 @@
 .homepage_content > h3 {
   font-family: var(--font-bluu-bold);
   font-size: 4rem;
-  width: 70rem;
-  height: 40rem;
+
   color: white;
   background-color: #bebebea1;
   text-align: start;
-  padding-top: 10rem;
-  padding-left: 4rem;
+  padding: 10rem 4rem;
   animation: shadow-opacity-animation 8s infinite;
 }
